v0.5.0/_sources/projections/cyl/cyl_stereographic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_stereographic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_stereographic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_stereographic.py:


Cylindrical Stereographic
=========================

The cylindrical stereographic projections are certainly not as notable as other
cylindrical projections, but are still used because of their relative
simplicity and their ability to overcome some of the downsides of other
cylindrical projections, like extreme distortions of the higher latitudes. The
stereographic projections are perspective projections, projecting the sphere
onto a cylinder in the direction of the antipodal point on the equator. The
cylinder crosses the sphere at two standard parallels, equidistant from the
equator.

**cyl_stere/**\ [*lon0/*]\ [*lat0/*]\ *scale*
or **Cyl_stere/**\ [*lon0/*]\ [*lat0/*]\ *width*

The projection is set with **cyl_stere** or **Cyl_stere**. The central meridian
is set by the optional *lon0*, and the figure size is set with *scale* or
*width*.

The standard parallel is typically one of these (but can be any value):

* 66.159467 - Miller's modified Gall
* 55 - Kamenetskiy's First
* 45 - Gall's Stereographic
* 30 - Bolshoi Sovietskii Atlas Mira or Kamenetskiy's Second
* 0 - Braun's Cylindrical

.. GENERATED FROM PYTHON SOURCE LINES 30-35



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_stereographic_001.png
   :alt: cyl stereographic
   :srcset: /projections/cyl/images/sphx_glr_cyl_stereographic_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(region="g", frame="afg", land="gray", projection="Cyl_stere/30/-20/12c")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.951 seconds)


.. _sphx_glr_download_projections_cyl_cyl_stereographic.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_stereographic.py <cyl_stereographic.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_stereographic.ipynb <cyl_stereographic.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
